# wk

./: README.md
AndCG3DViewer/: settings.gradle
AndCG3DViewer/app/: build.gradle
AndCG3DViewer/app/src/androidTest/java/com/tks/cg3dviewer/: ExampleInstrumentedTest.java
AndCG3DViewer/app/src/main/: AndroidManifest.xml
AndCG3DViewer/app/src/main/cpp/: CG3DCom.cpp  CG3DCom.h  CG3DViewer.cpp  CG3DViewer.h  CMakeLists.txt  Jni.cpp
AndCG3DViewer/app/src/main/cpp/OpenGL/: GLES2.cpp  GLES2.h
AndCG3DViewer/app/src/main/cpp/format/: CG3D.cpp  CG3D.h  FBX.cpp  FBX.h  FbxUtil_.h  MQO.cpp  MQO.h  MatVec.cpp  MatVec.h  MatrixVector.cpp  MatrixVector.h  import_fbx.cpp  import_fbx.h
AndCG3DViewer/app/src/main/java/com/tks/cg3dviewer/: CG3DViewerActivity.java
AndCG3DViewer/app/src/main/java/com/tks/cg3dviewer/modelformat/: FBX.java  MQO.java
AndCG3DViewer/app/src/main/res/layout/: cg3dviewer.xml
AndCG3DViewer/app/src/main/res/values/: strings.xml  themes.xml
AndCG3DViewer/app/src/main/res/values-night/: themes.xml
AndCG3DViewer/app/src/test/java/com/tks/cg3dviewer/: ExampleUnitTest.java
AndCG3DViewer/gradle/wrapper/: gradle-wrapper.properties
WinCG3DVewer/: WinCG3DVewer.sln
WinCG3DVewer/WinCG3DVewer/: ComDef.cpp  ComDef.h  Resource.h  WinCG3DVewer.cpp  WinCG3DVewer.rc  WinCG3DVewer.vcxproj  WinCG3DVewer.vcxproj.filters
WinCG3DVewer/WinCG3DVewer/include/GL2/: gl2.h
